Fix text align. when no txt nodes are wide as the c'tainer (closes #464)

--- a/app/assets/stylesheets/training_modules/_quiz.styl
+++ b/app/assets/stylesheets/training_modules/_quiz.styl
@@ -1,5 +1,7 @@
 .training__slide__quiz
   width $slide_inner_content_width
+  +below($desktop)
+    width 100%
   margin 0 auto
   ul
     list-style none
